--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h2>My <span>Projects</span><span class="bg-text">My Projects</span></h2>
         </div>
         <p class="port-text">
-            Here is some of my projects that I've done in various programming languages.
+            Here are some of my projects that I've done in various programming languages.
         </p>
         <div class="portfolios">
             <div class="portfolio-item">
