--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h5>Student<span> - IJSE</span></h5>
                 <p>
                     I am still a software engineering student in IJSE (Institute of JavaSoftware Engineering)and
-                    currently completing second semester.
+                    currently completing third semester.
                 </p>
             </div>
             <div class="timeline-item">
