--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <main>
     <section class="container about" id="about">
         <div class="main-title">
-            <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+            <h2>About <span>me</span><span class="bg-text">my status</span></h2>
         </div>
         <div class="about-container">
             <div class="left-about">
@@ -478,7 +478,7 @@
                                 <span>Email</span>
                             </div>
                             <p>
-                                <span>:nirashaweerasingha11@gmail.com</span>
+                                <span>:nirashaweerasingha0729@gmail.com</span>
                             </p>
                         </div>
                         <div class="contact-item">
