--- a/index.html
+++ b/index.html
@@ -143,32 +143,63 @@
                     <i class="fas fa-briefcase"></i>
                 </div>
                 <p class="tl-duration">2020 - present</p>
-                <h5>Student<span> - IJSE</span></h5>
-                <p>
-                    I am still a software engineering student in IJSE (Institute of JavaSoftware Engineering)and
-                    currently completing third semester.
-                </p>
+                <h5>Graduate Diploma in Software
+                    Engineering (GDSE)
+                    <br>
+                    <span> -Institute of Software Engineering (IJSE)</span>
+                </h5>
             </div>
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2019</p>
-                <h5>English & ICT Diploma<span> - ICBT</span></h5>
-                <p>
-                   I have completed diploma in english and ict at ICBT Campus
-                </p>
+                <p class="tl-duration">2019 (Commerce Stream)</p>
+                <h5>G.C.E Advanced Level Examination
+                    <br>
+                    <span> -Anula Devi Girls’ College</span>
+                </h5>
             </div>
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2006-2019</p>
-                <h5>Primary and Secondary Education<span> - Anula Devi Girls' College</span></h5>
-                <p>
-                    I complete my primary and secondary education at anula devi girls' school
-                </p>
+                <p class="tl-duration">2020 May - 2020 Nov</p>
+                <h5>Diploma in Information &
+                    Communication Technology & Diploma in English
+                    <br>
+                    <span> -ICBT Campus</span>
+                </h5>
             </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
+                <p class="tl-duration">2016 (English Medium)</p>
+                <h5>G.C.E Ordinary Level Examination
+                    <br>
+                    <span> -Anula Devi Girls’ College</span>
+                </h5>
+            </div>
+<!--            <div class="timeline-item">-->
+<!--                <div class="tl-icon">-->
+<!--                    <i class="fas fa-briefcase"></i>-->
+<!--                </div>-->
+<!--                <p class="tl-duration">2019</p>-->
+<!--                <h5>English & ICT Diploma<span> - ICBT</span></h5>-->
+<!--                <p>-->
+<!--                   I have completed diploma in english and ict at ICBT Campus-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div class="timeline-item">-->
+<!--                <div class="tl-icon">-->
+<!--                    <i class="fas fa-briefcase"></i>-->
+<!--                </div>-->
+<!--                <p class="tl-duration">2006-2019</p>-->
+<!--                <h5>Primary and Secondary Education<span> - Anula Devi Girls' College</span></h5>-->
+<!--                <p>-->
+<!--                    I complete my primary and secondary education at anula devi girls' school-->
+<!--                </p>-->
+<!--            </div>-->
         </div>
     </section>
     <section class="container" id="portfolio">
