--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
                     <i class="fas fa-briefcase"></i>
                 </div>
                 <p class="tl-duration">2020 May - 2020 Nov</p>
-                <h5>Diploma in Information &
-                    Communication Technology & Diploma in English
+                <h5>Diploma in Information & Communication Technology
                     <br>
                     <span> -ICBT Campus</span>
                 </h5>
@@ -180,6 +179,18 @@
                     <span> -Anula Devi Girls’ College</span>
                 </h5>
             </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
+                <p class="tl-duration">2020 Jan - 2020 Aug
+                </p>
+                <h5> Diploma in English
+                    <br>
+                    <span> -ICBT Campus</span>
+                </h5>
+            </div>
+
 <!--            <div class="timeline-item">-->
 <!--                <div class="tl-icon">-->
 <!--                    <i class="fas fa-briefcase"></i>-->
