--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="btn-con">
-                    <a href="files/Frontend%20Developer.pdf" class="main-btn">
+                    <a href="files/Full%20Stack%20Developer.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
