--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
           rel="stylesheet">
+    <link href="img/me.jpg" rel="icon">
+    <link href="img/me.jpg" rel="apple-touch-icon">
 </head>
 <body class="main-content">
 <header class="container header active" id="home">
@@ -38,7 +40,7 @@
         </div>
         <div class="about-container">
             <div class="left-about">
-                <h4>Information About me</h4>
+                <h4>Information <br>About me</h4>
                 <p>
                     I am still a software engineering student in IJSE (Institute of JavaSoftware Engineering)and
                     currently completing second semester.
@@ -47,11 +49,11 @@
                     I think everything is posible.
                     <br>
                     <br>
-                    Name : P.Nirasha Madubhashini.
+                    <b>Name :</b> P.Nirasha Madubhashini.
                     <br>
-                    Age : 22
+                    <b>Age :</b> 22
                     <br>
-                    Home Town : Galle , Southern Province
+                    <b>Home Town :</b> Galle , Southern Province
                 </p>
             </div>
             <div class="right-about">
