--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <img src="img/Inventory%20Management%20System.png" alt="">
                 </div>
                 <div class="hover-items">
-                    <h3>Inventory Management<br>System</h3>
+                    <h3>Inventory <br>Management<br>System</h3>
                     <div class="icons">
                         <a href="https://github.com/NirashaMadubhashini/Inventory-Management-System.git" class="icon">
                             <i class="fab fa-github"></i>
@@ -320,7 +320,7 @@
                     <img src="img/carRental.png" alt="">
                 </div>
                 <div class="hover-items">
-                    <h3>Car Rental System-FrontEnd</h3>
+                    <h3>Car Rental <br>System-FrontEnd</h3>
                     <div class="icons">
                         <a href="https://github.com/NirashaMadubhashini/Car-Rental-System-FrontEnd.git" class="icon">
                             <i class="fab fa-github"></i>
@@ -335,7 +335,7 @@
                     <img src="img/chat.png" alt="">
                 </div>
                 <div class="hover-items">
-                    <h3>Client Chat Application</h3>
+                    <h3>Client Chat <br>Application</h3>
                     <div class="icons">
                         <a href="https://github.com/NirashaMadubhashini/Client_Chat_Application.git" class="icon">
                             <i class="fab fa-github"></i>
