--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="btn-con">
-                    <a href="files/Full%20Stack%20Developer.pdf" class="main-btn">
+                    <a href="files/CV-P.Nirasha%20Madubhashini.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
