--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
             <div class="left-about">
                 <h4>Information <br>About me</h4>
                 <p>
-                    I am still a software engineering student in IJSE (Institute of JavaSoftware Engineering)and
-                    currently completing second semester.
-                    I am open to listening, learning and collaborating.
-                    I'm easy going person with positive attitudes and good team working ability.
-                    I think everything is posible.
+                    My name is P. Nirasha Madubhashini.
+                    I studied at Anula Devi Girls' College.
+                    I joined IJSE after completing ALs.
+                    I recently completed the 3rd semester of my GDSE Software Engineering Diploma.
+                    I am open to listening, learning, and collaborating.
+                    I'm an easy going person with positive attitudes and good teamwork abilities.
+                    I think everything is possible.
                     <br>
                     <br>
                     <b>Name :</b> P.Nirasha Madubhashini.
