--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
           rel="stylesheet">
-    <link href="img/me.jpg" rel="icon">
-    <link href="img/me.jpg" rel="apple-touch-icon">
+    <link href="img/me2.JPG" rel="icon">
+    <link href="img/me2.JPG" rel="apple-touch-icon">
 </head>
 <body class="main-content">
 <header class="container header active" id="home">
@@ -22,13 +22,13 @@
         <div class="left-header">
             <div class="h-shape"></div>
             <div class="image">
-                <img src="img/me.jpg" alt="">
+                <img src="img/me2.JPG" alt="">
             </div>
         </div>
         <div class="right-header">
             <h1 class="name">
                 Hi, I'm <span>Nirasha Madubhashini.</span>
-                <br>A Web Developer & UI/UX Designer.
+                <br>A Business Anaylst & Web Developer.
             </h1>
         </div>
     </div>
@@ -36,24 +36,23 @@
 <main>
     <section class="container about" id="about">
         <div class="main-title">
-            <h2>About <span>me</span><span class="bg-text">my status</span></h2>
+            <h2>About <span>me</span><span class="bg-text">My Status</span></h2>
         </div>
         <div class="about-container">
             <div class="left-about">
                 <h4>Information <br>About me</h4>
                 <p>
                     My name is P. Nirasha Madubhashini.
-                    I studied at Anula Devi Girls' College.
-                    I joined IJSE after completing ALs.
-                    I recently completed the 3rd semester of my GDSE Software Engineering Diploma.
+                    I studied at Anula Devi Girls' College and joined the Institute of Software Engineering (IJSE) after completing my Advanced Levels (ALs).
+                    I have completed my GDSE Software Engineering Diploma, and after that, I completed my degree, a BEng (Hons) in Software Engineering, from the University of Metropolitan London.
                     I am open to listening, learning, and collaborating.
-                    I'm an easy going person with positive attitudes and good teamwork abilities.
-                    I think everything is possible.
+                    I am an easy-going person with a positive attitude and good teamwork abilities.
+                    I believe that everything is possible.
                     <br>
                     <br>
                     <b>Name :</b> P.Nirasha Madubhashini.
                     <br>
-                    <b>Age :</b> 22
+                    <b>Age :</b> 24
                     <br>
                     <b>Home Town :</b> Galle , Southern Province
                 </p>
@@ -61,7 +60,7 @@
             <div class="right-about">
                 <div class="about-item">
                     <div class="abt-text">
-                        <p class="large-text">10+</p>
+                        <p class="large-text">25+</p>
                         <p class="small-text">Projects <br/> Completed</p>
                     </div>
                 </div>
@@ -146,11 +145,10 @@
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2020 - present</p>
-                <h5>Graduate Diploma in Software
-                    Engineering (GDSE)
+                <p class="tl-duration">2023 - 2024</p>
+                <h5>BEng (Hons) in Software Engineering
                     <br>
-                    <span> -Institute of Software Engineering (IJSE)</span>
+                    <span> -University of Metropolitan London</span>
                 </h5>
             </div>
             <div class="timeline-item">
@@ -167,12 +165,14 @@
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2020 May - 2020 Nov</p>
-                <h5>Diploma in Information & Communication Technology
+                <p class="tl-duration">2020 - 2023</p>
+                <h5>Graduate Diploma in Software
+                    Engineering (GDSE)
                     <br>
-                    <span> -ICBT Campus</span>
+                    <span> -Institute of Software Engineering (IJSE)</span>
                 </h5>
             </div>
+
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
@@ -187,13 +187,23 @@
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2020 Jan - 2020 Aug
-                </p>
-                <h5> Diploma in English
+                <p class="tl-duration">2020 May - 2020 Nov</p>
+                <h5>Diploma in Information & Communication Technology and English
                     <br>
                     <span> -ICBT Campus</span>
                 </h5>
             </div>
+<!--            <div class="timeline-item">-->
+<!--                <div class="tl-icon">-->
+<!--                    <i class="fas fa-briefcase"></i>-->
+<!--                </div>-->
+<!--                <p class="tl-duration">2020 Jan - 2020 Aug-->
+<!--                </p>-->
+<!--                <h5> Diploma in English-->
+<!--                    <br>-->
+<!--                    <span> -ICBT Campus</span>-->
+<!--                </h5>-->
+<!--            </div>-->
 
 <!--            <div class="timeline-item">-->
 <!--                <div class="tl-icon">-->
@@ -219,7 +229,7 @@
     </section>
     <section class="container" id="portfolio">
         <div class="main-title">
-            <h2>My <span>Projects</span><span class="bg-text">My Projects</span></h2>
+            <h2>My<span>Projects</span><span class="bg-text">My Projects</span></h2>
         </div>
         <p class="port-text">
             Here are some of my projects that I've done in various programming languages.
@@ -512,38 +522,29 @@
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Location</span>
+                                <span>Location : No:49/12-Circular Road,Galle.</span>
                             </div>
-                            <p>
-                                : No:49/12-Circular Road,Galle.
-                            </p>
                         </div>
+                        <br>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
-                                <span>Email</span>
+                                <span>Email : nirashamadubhashini1212@gmail.com</span>
                             </div>
-                            <p>
-                                <span>:nirashaweerasingha0729@gmail.com</span>
-                            </p>
                         </div>
+                        <br>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-phone"></i>
-                                <span>Mobile Number</span>
+                                <span>Mobile Number : 076-1319259</span>
                             </div>
-                            <p>
-                                <span>: 076-1319259</span>
-                            </p>
                         </div>
+                        <br>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-globe-africa"></i>
-                                <span>Languages</span>
+                                <span>Languages : English, Sinhala</span>
                             </div>
-                            <p>
-                                <span>:English, Sinhala</span>
-                            </p>
                         </div>
                     </div>
                     <div class="contact-icons">
